# webay

./: Cargo.toml  README.md  sqlite.db  sqlite.db-shm  sqlite.db-wal
src/: db.rs  main.rs  make_plot.py  model.rs  requirements.txt  scrape.rs  sqlite.db
